fixed bug caused by scroll overflow

--- a/app/modules/header.styl
+++ b/app/modules/header.styl
@@ -54,8 +54,9 @@ $main_color = rgba(#6e3124, 0.73)// rgb(110, 36, 90)
     transition background-color .4s ease
     &:hover
       background-color #bdb2b24d
-.nav-bottom .nav-item
-  padding .5rem 1rem 1rem 1rem
+.nav-bottom
+  .nav-item
+    padding .5rem 1rem 1rem 1rem
   background-color $main_color
 
 
